--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@types/morgan": "^1.9.4",
+    "bcrypt": "^5.1.0",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
