--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "http-status-codes": "^2.2.0",
     "jest": "^29.4.3",
