--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/express-session": "^1.17.6",
     "@types/morgan": "^1.9.4",
     "bcrypt": "^5.1.0",
     "chalk": "^5.2.0",
