--- a/socket/package.json
+++ b/socket/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.14.1",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
     "socketio": "^1.0.0",
     "typescript": "^4.9.5"
