--- a/socket/package.json
+++ b/socket/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx ts-node-dev index.ts"
+    "start:dev": "npx ts-node-dev index.ts"
   },
   "keywords": [],
   "author": "",
